Crash: Re-linking Object to Different Scene #47368

Closed
opened 2016-02-09 02:50:09 +01:00 by Hilaire Gagne · 4 comments

System Information
Windows 7 Ultimate (64-bit), full patched to Feb 2016, NVidia Quadro 5000 (354.56).

Blender Version
2.76b (2015-11-03 10:56, f337fea)
Worked: (optional)

Short description of error
Blender crashes when attempting to re-link an object to a different scene.

Exact steps for others to reproduce the error

  • Start Blender with default Scene (Cube, Light, Camera)
  • Create a new empty scene (ex: Scene.001)
  • Select the default Scene
  • Select the "Cube" from the Outliner
  • Select the Objectmenu > Make Links> Objects To Scene> "Scene.001"
  • Select the new empty (ex: Scene.001) scene that now contains the linked "Cube"
  • From the Outliner, right-click on the "Cube" and select Delete Hierarchy
  • Return to the default Scene
  • Select the "Cube" from the Outliner
  • Select the Objectmenu > Make Links> Objects To Scene> "Scene.001"

Discovered this issue during coding this automation via Blender Python; steps noted above consistently occur via the Interface. Fresh install (aka stock build) of Blender x64.

**System Information** Windows 7 Ultimate (64-bit), full patched to Feb 2016, NVidia Quadro 5000 (354.56). **Blender Version** 2.76b (2015-11-03 10:56, f337fea) Worked: (optional) **Short description of error** Blender crashes when attempting to re-link an object to a different scene. **Exact steps for others to reproduce the error** - Start Blender with default **Scene** (Cube, Light, Camera) - Create a new empty scene (ex: *Scene.001*) - Select the default **Scene** - Select the "Cube" from the Outliner - Select the **Object**menu > **Make Links**> **Objects To Scene**> "Scene.001" - Select the new empty (ex: *Scene.001*) scene that now contains the linked "Cube" - From the Outliner, right-click on the "Cube" and select **Delete Hierarchy** - Return to the default **Scene** - Select the "Cube" from the Outliner - Select the **Object**menu > **Make Links**> **Objects To Scene**> "Scene.001" Discovered this issue during coding this automation via Blender Python; steps noted above consistently occur via the Interface. Fresh install (aka stock build) of Blender x64.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @hgagne

Added subscriber: @hgagne
Campbell Barton self-assigned this 2016-02-09 07:44:33 +01:00

This issue was referenced by 7e5cabb6b6

This issue was referenced by 7e5cabb6b65d6c5140cb513d5500944f28af3c98

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47368
No description provided.