Fix T47368: Crash re-linking object to scene